<resources>
    <string name="app_name">WalkR</string>
    <string name="walkr_not_applicable">n/a</string>

    <string name="library_title">Library</string>
    <string name="library_add">Add Playlist</string>
    <string name="playlist_item_cover">Playlist cover</string>
    <string name="library_count">%1$d tracks</string>

    <string name="generation_tempo_label">Tempo</string>
    <string name="generation_tempo_max_label">260 bpm</string>
    <string name="generation_generate_playlist">Generate Playlist</string>
    <string name="generation_title">Generate Playlist</string>
    <string name="generation_detect">Detect</string>
    <string name="generation_tap">Tap</string>
    <string name="generation_calibrate">Calibrate</string>
    <string name="generation_detection_failed">Tempo detection failed (%1$s), please retry</string>
    <string name="generation_detection_cancelled">Tempo detection cancelled</string>

    <string name="display_label">Playlist Tracks</string>
    <string name="display_save">Save Playlist</string>
    <string name="display_no_result">No result</string>
    <string name="display_save_result_msg">Playlist \'%1$s\' has been saved successfully with number of tracks: %2$d
    </string>
    <string name="display_save_error_msg">Error saving playlist: %1$s</string>

    <string name="track_cover_content_desc">Track cover</string>

    <string name="playlist_naming_default_title">Untitled</string>
    <string name="playlist_naming_dialog_title">Give your playlist a name</string>
    <string name="playlist_naming_confirm">Confirm</string>
    <string name="playlist_naming_cancel">Cancel</string>

    <string name="menu_main_log_in">Log in</string>
    <string name="menu_main_log_out">Log out</string>

    <string name="login_auth_canceled">Authorization request canceled</string>
    <string name="login_successful">You are logged in</string>

    <string name="lib_item_group_today">Today</string>
    <string name="lib_item_group_week">Earlier this week</string>
    <string name="lib_item_group_month">Earlier this month</string>
    <string name="lib_item_group_year">Earlier this year</string>
    <string name="lib_item_group_earlier">Earlier</string>

    <string name="tap_tempo_tap_in_rythm">Tap in rhythm</string>
    <string name="tap_tempo_close">Close</string>
    <string name="tap_tempo_reset">Reset</string>

    <string name="calibration_factor">\u00d7 %.02f \u003d</string>
    <string name="calibration_failed">Tempo detection failed. Please retry.</string>
</resources>
